@@ -1,3 +1,8 @@
+2008-11-04  Mike Krüger  <mike@icsharpcode.net>
+
+	* Parser/CodeGenerator.cs: fixed 'Bug 427453 - The rename operations are
+	not working'.
+
 2008-11-03  Mike Krüger  <mike@icsharpcode.net>
 
 	* Parser/CodeGenerator.cs:
